# bcon

./: .env.example  .gitignore  GUIDE.md  README.md  adapter_events.md  docker-compose.yml
.claude/: settings.local.json
bcon_adapter/: GUIDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bcon_adapter/core/: build.gradle.kts
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/: BconAdapter.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/commands/: DynamicCommandManager.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/config/: BconConfig.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/connection/: BconWebSocketClient.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/events/: EventManager.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/integration/: BlueMapIntegration.kt
bcon_adapter/core/src/main/kotlin/com/bcon/adapter/core/logging/: BconLogger.kt
bcon_adapter/fabric/: build.gradle.kts
bcon_adapter/fabric/src/main/java/com/bcon/adapter/fabric/mixins/: AbstractFurnaceBlockEntityMixin.java  AnimalEntityMixin.java  FishingBobberEntityMixin.java  PlayerEntityMixin.java  ServerPlayerEntityMixin.java  SimpleFabricMixins.java
bcon_adapter/fabric/src/main/kotlin/com/bcon/adapter/fabric/: FabricBconAdapter.kt  FabricEventBridge.kt
bcon_adapter/fabric/src/main/kotlin/com/bcon/adapter/fabric/commands/: FabricCommandManager.kt
bcon_adapter/fabric/src/main/kotlin/com/bcon/adapter/fabric/integration/: FabricBlueMapIntegration.kt
bcon_adapter/fabric/src/main/kotlin/com/bcon/adapter/fabric/logging/: FabricBconLogger.kt
bcon_adapter/fabric/src/main/resources/: bcon.mixins.json  fabric.mod.json
bcon_adapter/folia/: build.gradle.kts
bcon_adapter/folia/src/main/kotlin/com/bcon/adapter/folia/: FoliaBconAdapter.kt
bcon_adapter/folia/src/main/kotlin/com/bcon/adapter/folia/commands/: FoliaCommandManager.kt
bcon_adapter/folia/src/main/kotlin/com/bcon/adapter/folia/integration/: FoliaBlueMapIntegration.kt
bcon_adapter/folia/src/main/kotlin/com/bcon/adapter/folia/logging/: FoliaBconLogger.kt
bcon_adapter/folia/src/main/resources/: plugin.yml
bcon_adapter/paper/: build.gradle.kts
bcon_adapter/paper/src/main/kotlin/com/bcon/adapter/paper/: PaperBconAdapter.kt
bcon_adapter/paper/src/main/kotlin/com/bcon/adapter/paper/commands/: PaperCommandManager.kt
bcon_adapter/paper/src/main/kotlin/com/bcon/adapter/paper/integration/: PaperBlueMapIntegration.kt
bcon_adapter/paper/src/main/kotlin/com/bcon/adapter/paper/logging/: PaperBconLogger.kt
bcon_adapter/paper/src/main/resources/: plugin.yml
bcon_client/: Cargo.toml  GUIDE.md  README.md  adapter_events.md
bcon_client/examples/: comprehensive_system_client.rs  deno_client.ts  node_client.js  player_client.rs  system_client.rs  web_example.html
bcon_client/src/: auth.rs  client.rs  lib.rs  message.rs  native.rs  wasm.rs
bcon_server/: Cargo.toml  Dockerfile  GUIDE.md  Makefile  README.md  config.json  wasm-build.sh
bcon_server/bindings/: deno_config.json  deno_server.ts  node_config.json  node_server.js
bcon_server/src/: auth.rs  command_tracker.rs  config.rs  connection.rs  error.rs  kv_store.rs  lib.rs  message.rs  rate_limiter.rs  rcon_client.rs  router.rs  server.rs
bcon_web/app/bluemap/: BlueMap.js  BlueMapApp.js  MainMenu.js  PopupMarker.js  Utils.js
bcon_web/app/bluemap/controls/map/: MapControls.js
bcon_web/app/bluemap/map/: Map.js
config/: bcon-adapter.json  bcon-server.json
old_fabric_mod/main/java/com/denorite/: BlueMapIntegration.java  Denorite.java  DenoriteConfig.java  DenoriteProtocol.java  DownloadManager.java  DynamicCommandHandler.java  FileSystemHandler.java
old_fabric_mod/main/java/com/denorite/mixin/: ExampleMixin.java  ScreenHandlerMixin.java
old_fabric_mod/main/resources/: denorite.mixins.json  fabric.mod.json
scripts/: generate-tokens.sh  setup.sh
