[package]
name = "bcon_server"
version = "0.1.0"
edition = "2021"
authors = ["Bcon Team"]
description = "WebSocket communication server for Minecraft adapters and clients"

[lib]
name = "bcon_server"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bcon"
path = "src/bin/main.rs"

[[bin]]
name = "token_gen"
path = "src/bin/token_gen.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT handling
jsonwebtoken = "9.0"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

# HTTP for health checks
hyper = { version = "0.14", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.0"

# Futures utilities
futures-util = "0.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
] }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies for file system, etc.
notify = "6.0"

[features]
default = ["native"]
native = []
wasm = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1